--- a/ClinicTranslator/app/src/main/res/values/strings.xml
+++ b/ClinicTranslator/app/src/main/res/values/strings.xml
@@ -11,6 +11,60 @@
         <item>Africaans</item>
         <item>Portuguese</item>
         <item>Spanish</item>
+        <item>German</item>
     </string-array>
     <string name="submitLanguage">Go!</string>
+    <string name="resetButton">Reset</string>
+    <string name="translateButton">Translate</string>
+    
+    <string name="salutation_text">How are you feeling today?</string>
+    <string-array name="primary_ailment_array">
+        <item></item>
+        <item>Headache</item>
+        <item>Stomachache</item>
+        <item>Injury</item>
+        <item>Cold</item>
+        <item>Fever</item>
+    </string-array>
+
+    <string name="headache_question_1">Since when have you been experiencing headache?</string>
+    <string-array name="durations_array">
+        <item></item>
+        <item>less than a day</item>
+        <item>1 day</item>
+        <item>2 days</item>
+        <item>3\-4 days</item>
+        <item>5\-7 days</item>
+        <item>1\-2 weeks</item>
+        <item>2\-4 weeks</item>
+        <item>1 month</item>
+        <item>2 months</item>
+        <item>3 months</item>
+        <item>4\-6 months</item>
+        <item>7\-12 months</item>
+        <item>1 year</item>
+        <item>2 years</item>
+        <item>3\-5 years</item>
+        <item>more than 5 years</item>
+    </string-array>
+
+    <string name="headache_question_2">Where exactly do you feel the pain?</string>
+    <string-array name="headache_point_array">
+        <item></item>
+        <item>Behind the eyes</item>
+        <item>On the top of the head</item>
+        <item>On the backside of the head</item>
+        <item>Forehead</item>
+        <item>Temples</item>
+    </string-array>
+
+    <string name="headache_question_3">What kind of pain are you experiencing?</string>
+    <string-array name="headache_pain_type_array">
+        <item></item>
+        <item>Stabbing pain</item>
+        <item>Burning pain</item>
+        <item>Throbbing</item>
+    </string-array>
+
+    <string name="exit_message">Please proceed to the doctor\'s desk now.</string>
 </resources>
